[package]
name = "mdx_util"
version = "0.5.0"
edition = "2021"
authors = ["Rayman Zhang <raymanzhang@gmail.com>"]
license = "AGPL-3.0"
description = "A comprehensive CLI tool for working with MDict (.mdx/.mdd) format database files"
repository = "https://github.com/raymanzhang/mdx_util"
homepage = "https://github.com/raymanzhang/mdx_util"
documentation = "https://github.com/raymanzhang/mdx_util/blob/main/README.md"
keywords = ["mdict", "mdx", "mdd", "dictionary", "cli"]
categories = ["command-line-utilities", "encoding"]
readme = "README.md"

[features]
default = ["icu"]
# Use ICU library for text collation and locale support
icu = ["mdx/icu"]
# Use Rust-ICU bindings (alternative to icu feature)
rust-icu = ["mdx/rust-icu"]

[[bin]]
name = "mdx_util"
path = "src/main.rs"

[dependencies]
# Core MDX/MDD file handling
mdx = { git = "https://github.com/Safari77/mdx", default-features = false }
lol_html = "2.7"

# CLI argument parsing
clap = { version = "4.6", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.8"

# Error handling
snafu = { version = "0.9", features = ["backtrace"] }

# Logging
log = "0.4"
fern = "0.7.1"

# File and path handling
shellexpand = "3.1"
walkdir = "2.4"
glob = "0.3"

# Data processing
regex = "1.11"
url = "2.5"
hex = "0.4"
rand = { version = "0.10", features = ["sys_rng"] }
once_cell = "1.21"

# UI/Output
colored = "3.0"

# Full-text search
tantivy = "0.26"

# Archive handling (for MDD packaging)
zip = { version = "8", default-features = false, features = ["deflate", "deflate64"] }
html-escape = "0.2"

[profile.release]
opt-level = 3
lto = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
